Borre la tabla nacionalidad

--- a/AppWeb/WebContent/web/midatospersonale.xhtml
+++ b/AppWeb/WebContent/web/midatospersonale.xhtml
@@ -44,7 +44,7 @@
 	    </p:column>
 	    
 	    <p:column headerText="Nacionalidad">
-	        <h:outputText value="#{a.nacionalidad.nombre}" />
+	        <h:outputText value="#{a.nacionalidad}" />
 	    </p:column>
 	    
 	    <p:column headerText="Estado civil">
