--- a/AppWeb/WebContent/web/newMDPersonale.xhtml
+++ b/AppWeb/WebContent/web/newMDPersonale.xhtml
@@ -92,11 +92,11 @@
 			
 			<p:outputLabel value="Lugar de nacimiento"/>
 			<p:inputText value="#{midatospersonaleController.midatospersonale.lugarDeNacimientoTexto}"  
-			required="true" requiredMessage="El campo Lugar de nacimiento es requerido" ><p:keyFilter regEx="/[a-z_]/i"/></p:inputText>
+			required="true" requiredMessage="El campo Lugar de nacimiento es requerido" ></p:inputText>
 			
 			<h:outputText value="Estado Civil" />
 			<p:inputText value="#{midatospersonaleController.midatospersonale.estadoCivilTexto}"  
-			required="true" requiredMessage="El campo Estado Civil es requerido" ><p:keyFilter regEx="/[a-z_]/i"/></p:inputText>
+			required="true" requiredMessage="El campo Estado Civil es requerido" ></p:inputText>
 			
 			<h:outputText value="Tipo de Sangre" />
 			<p:inputText value="#{midatospersonaleController.midatospersonale.tipoDeSangreTexto}"  
@@ -108,7 +108,7 @@
 			
 			<h:outputText value="Direccion" />
 			<p:inputText value="#{midatospersonaleController.midatospersonale.direccion}"  
-			required="true" requiredMessage="El campo Direccion es requerido" ><p:keyFilter regEx="/[a-z_]/i"/></p:inputText>
+			required="true" requiredMessage="El campo Direccion es requerido" ></p:inputText>
 			
 			<h:outputText value="Telefono celular" />
 			<p:inputText value="#{midatospersonaleController.midatospersonale.telefonoCelular}"  
@@ -120,7 +120,7 @@
 			
 			<h:outputText value="Correo Electronico" />
 			<p:inputText value="#{midatospersonaleController.midatospersonale.correoElectronico}"  
-			required="true" requiredMessage="El campo Correo Electronico es requerido" ><p:keyFilter regEx="/[a-z0-9_\.\-@]/i"/></p:inputText>
+			required="true" requiredMessage="El campo Correo Electronico es requerido" ></p:inputText>
 			
 		</p:panelGrid>
 			<!--
