--- a/AppWeb/WebContent/web/newmititulosobtenido.xhtml
+++ b/AppWeb/WebContent/web/newmititulosobtenido.xhtml
@@ -70,15 +70,15 @@
 			
 			<h:outputText value="Titulo" />
 			<p:inputText value="#{mititulosobtenidoController.mititulosobtenido.titulo}"  
-			required="true" requiredMessage="El campo Institucion es requerido" ></p:inputText>
+			required="true" requiredMessage="El campo Titulo es requerido" ></p:inputText>
 			
 			<h:outputText value="Universidad" />
 			<p:inputText value="#{mititulosobtenidoController.mititulosobtenido.universidad}"  
-			required="true" requiredMessage="El campo Numero de horas es requerido" ></p:inputText>
+			required="true" requiredMessage="El campo Universidad es requerido" ></p:inputText>
 			
 			<h:outputText value="Ciudad" />
 			<p:inputText value="#{mititulosobtenidoController.mititulosobtenido.ciudad}"  
-			required="true" requiredMessage="El campo Institucion es requerido" ></p:inputText>
+			required="true" requiredMessage="El campo Ciudad es requerido" ></p:inputText>
 			
 			<h:outputLabel value="Fecha de grado" for="button"/>
 			<p:calendar id="button" value="#{mititulosobtenidoController.mititulosobtenido.fechaDeGrado}" pattern="dd/MM/yyyy" 
